<resources>
    <string name="home">Home</string>
    <string name="team">Team</string>
    <string name="my_policy">My Policy</string>
    <string name="my_wallet">My Wallet</string>
    <string name="renewals">Renewals</string>
    <string name="cases">Cases</string>
    <string name="support">Support</string>
    <string name="more">More</string>

    <string name="whoops">Whoops!</string>
    <string name="no_internet_msg">No Internet connection found.\nCheck your connection or try again.</string>
    <string name="ok">OK</string>

    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="hi">Hi,</string>
    <string name="developer">Developer</string>
    <string name="lineups_out">Lineups Out</string>
    <string name="insurance">Insurance</string>
    <string name="my_renewal">My Renewal</string>
    <string name="my_performance">My Performance</string>
    <string name="not_started">Not started</string>
    <string name="live">Live</string>
    <string name="completed">Completed</string>
    <string name="upcoming">Upcoming</string>
    <string name="vs">VS</string>
    <string name="joining">Joinings</string>
    <string name="contests">Contests</string>
    <string name="top_running_rank">Top Running Rank :</string>
    <string name="count_placeholder">(%d)</string>
    <string name="ruppe_symbol">₹</string>
    <string name="ruppe_symbol_placeholder">₹ %s</string>
    <string name="ruppe_symbol_credit">Credit:  ₹ %s</string>
    <string name="ruppe_symbol_debit">Debit:  ₹ %s</string>

    <string name="wallet_payout_paid">₹ %s - Paid</string>
    <string name="wallet_payout_unpaid">₹ %s - UnPaid</string>

    <string name="close">Close</string>
    <string name="log_in_or_sign_up">Log in or Sign up</string>
    <string name="dropdown">Dropdown</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="mobile_number_verification_desc">We will send a verification code on your number to confirm it\'s you.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="continues">Continue</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="wallet_summary">Wallet summary</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="menu_booking_request">Booking Request</string>
    <string name="welcome_to">Welcome To</string>
    <string name="sign_up_with_work_email">Sign Up With Work email</string>

    <string name="by_continui">
            By continuing, you agree with our Privacy Policy, Credit Report Terms of Use and Terms of Use.
    </string>
    <string name="by_continui_1">Privacy Policy, Credit Report Terms of Use</string>
    <string name="by_continui_2">Terms of Use.</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="dont_have_an_account">Don’t have an account? Sign Up</string>
    <string name="already_have_an_account">Already have an account? Log In</string>
    <string name="enter_email_phone_no">Enter email / Phone no.</string>
    <string name="enter_password">Enter Password</string>
    <string name="others">Others</string>

</resources>