<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivNoInternet"
        android:layout_width="0dp"
        android:layout_height="@dimen/_120sdp"
        android:scaleType="fitXY"
        android:src="@drawable/img_no_internet_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1.0"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/lay_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivNoInternet">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/whoops"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="?android:textColorPrimary" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:text="@string/no_internet_msg"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="?android:textColorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConfirm"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="@color/black"
            app:cornerRadius="24dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>