<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/include_toolbar_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/tvPrivacyPolicy"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_6sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingBottom="@dimen/_6sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/log_in"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmailMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:background="@drawable/bg_login_edittext"
                android:elevation="@dimen/_6sdp"
                android:gravity="center_vertical"
                android:hint="@string/enter_email_phone_no"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:textFontWeight="600"
                android:textSize="@dimen/_12ssp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:background="@drawable/bg_login_edittext">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/ivTogglePassword"
                    android:background="@null"
                    android:elevation="@dimen/_6sdp"
                    android:hint="@string/enter_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:textFontWeight="600"
                    android:textSize="@dimen/_12ssp" />

                <ImageView
                    android:id="@+id/ivTogglePassword"
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:contentDescription="@string/enter_password"
                    android:src="@drawable/ic_eye" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="start"
                android:text="@string/verify_otp"
                android:textColor="?android:textColorPrimary"
                android:textFontWeight="600"
                android:textSize="@dimen/_10ssp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:elevation="@dimen/_6sdp"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.chaos.view.PinView
                    android:id="@+id/pinview"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:cursorVisible="false"
                    android:gravity="center"
                    android:inputType="number"
                    android:itemBackground="@drawable/bg_pin_view"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    app:itemCount="6"
                    app:itemHeight="@dimen/_38sdp"
                    app:itemSpacing="@dimen/_8sdp"
                    app:itemWidth="@dimen/_38sdp"
                    app:lineWidth="0dp"
                    app:viewType="none" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:background="@drawable/bg_login_button"
                android:backgroundTint="?android:colorPrimary"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="?android:textColorPrimaryInverse"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:orientation="horizontal">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/tvOr"
                    android:background="@color/grey_540" />

                <TextView
                    android:id="@+id/tvOr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/or_continue_with"
                    android:textColor="@color/grey_540"
                    android:textSize="@dimen/_10ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/tvOr"
                    android:background="@color/grey_540" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btnSignUpEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:background="@drawable/bg_login_button"
                android:backgroundTint="?android:colorPrimary"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_toStartOf="@+id/sign_up_email"
                    android:src="@drawable/ic_mail_outline"
                    app:tint="?android:textColorPrimaryInverse" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sign_up_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:clickable="false"
                    android:stateListAnimator="@null"
                    android:text="@string/sign_up_with_work_email"
                    android:textAllCaps="false"
                    android:textColor="?android:textColorPrimaryInverse"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tvDontHaveAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:autoLink="none"
                android:gravity="center_horizontal|top"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:text="@string/dont_have_an_account"
                android:textColor="@color/grey_725"
                android:textFontWeight="600"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvPrivacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/_5sdp"
            android:autoLink="none"
            android:gravity="center_horizontal|top"
            android:paddingStart="@dimen/_16sdp"
            android:paddingTop="@dimen/_6sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_6sdp"
            android:textColor="@color/grey_725"
            android:textFontWeight="600"
            android:textSize="@dimen/_9ssp"
            tools:text="@string/by_continui" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_47sdp"
        android:layout_height="@dimen/_47sdp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/accent_color_secondary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>